# pangea-gpt

./: .gitignore  LICENSE  README.md  build.sh  elm.json  package.json  pyproject.toml
src/: Main.elm  pangea-gpt.py
